# academic-tour-guide

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  deploy_frontend.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260427_0001_initial_schema.py  20260428_0002_source_health_checks.py  20260428_0003_outreach_draft_metadata.py  20260428_0004_roadshow_models.py  20260504_0001_multitenant_saas.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  datetime.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py
backend/app/scraping/: base.py  name_quality.py  sources.py
backend/app/services/: ai.py  audit.py  autonomy.py  availability.py  business_cases.py  clustering.py  enrichment.py  identity_sources.py  ingestion.py  logistics.py  operator.py  opportunities.py  outreach.py  plausibility.py  repec.py  review.py  roadshow.py  scoring.py  seed.py  tenancy.py  tour_assembly.py  travel_planning.py  travel_prices.py
backend/tests/: conftest.py  test_ai_automation.py  test_api.py  test_availability.py  test_business_cases.py  test_cloud_readiness.py  test_cloud_run_vertex.py  test_parsers.py  test_phase2.py  test_scoring.py  test_tenancy.py
backend/tests/fixtures/: bis.html  bocconi.html  bonn.html  ecb.html  kof_detail.html  kof_index.html  mannheim.html
frontend/: .dockerignore  (+6 more)
(+58 files in other folders)
