[project]
name = "roadshow-backend"
version = "0.3.2"
description = "FastAPI backend for Roadshow."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "google-cloud-aiplatform>=1.71.0",
  "httpx>=0.27.2",
  "pypdf>=5.4.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "python-dateutil>=2.9.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
